--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "^8.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -36,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8"
   }
 }
